--- a/j/jo/joh/johnsoncontrols.com.html
+++ b/j/jo/joh/johnsoncontrols.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the johnsoncontrols.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222120152id_/http%3A//www.johnsoncontrols.com/content/us/en/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the johnsoncontrols.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215035038id_/http%3A//www.johnsoncontrols.com/content/us/en/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -77,6 +77,14 @@ function readCookie(name) {
 	return null;
 }
 </script>
+
+<style>
+div.header
+{
+	margin: 0 0 15px 0;
+}
+  
+</style>
 </head>
 
 
@@ -1114,16 +1122,16 @@ function readCookie(name) {
 
 
 
-    <span style="float:left;padding-right:5px;font-weight:bold;font-size:14px;">Follow us</span>
-    <!-- AddThis Follow BEGIN -->   
-    <div class="addthis_toolbox addthis_default_style">
-    <a class="addthis_button_facebook_follow" addthis:userid="#!/JohnsonControls"></a>
-    <a class="addthis_button_twitter_follow" addthis:userid="johnsoncontrols"></a>
-    <a class="addthis_button_linkedin_follow" addthis:userid="johnson-controls" addthis:usertype="company"></a>
-    <a class="addthis_button_youtube_follow" addthis:userid="JohnsonControlsInc/JohnsonControls"></a>
-    </div>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-522636787871eca7"></script>
-    <!-- AddThis Follow END -->
+	<span style="float:left;padding-right:5px;font-weight:bold;font-size:14px;">Follow us</span>
+	<!-- AddThis Follow BEGIN -->	
+	<div class="addthis_toolbox addthis_default_style">
+	<a class="addthis_button_facebook_follow" addthis:userid="#!/JohnsonControls"></a>
+	<a class="addthis_button_twitter_follow" addthis:userid="johnsoncontrols"></a>
+	<a class="addthis_button_linkedin_follow" addthis:userid="johnson-controls" addthis:usertype="company"></a>
+	<a class="addthis_button_youtube_follow" addthis:userid="JohnsonControlsInc/JohnsonControls"></a>
+	</div>
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-522636787871eca7"></script>
+	<!-- AddThis Follow END -->
 
 </div>
 
@@ -1628,7 +1636,7 @@ If you would like to communicate with Johnson Controls regarding privacy issues 
     
         <a href="/content/us/en/feedback.html">Feedback</a>
     
-    <br>© 2013 Johnson Controls. All rights reserved.
+    <br>© 2014 Johnson Controls. All rights reserved.
 </div>
 </div>
 
