--- a/r/ra/rai/rainbowdressup.net.html
+++ b/r/ra/rai/rainbowdressup.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbowdressup.net privacy policy that was archived on 2013-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130618203057id_/http%3A//www.rainbowdressup.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbowdressup.net privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215044123id_/http%3A//www.rainbowdressup.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:fb="http://ogp.me/ns/fb#"><head>
 
@@ -34,10 +34,16 @@
 <meta name="keywords" content="girl games, dressup games, privacy policy">
 
 <!-- css -->
-<link href="http://www.rainbowdressup.com/css/style.css?ver=1.746" rel="stylesheet" type="text/css" media="screen">
+<link href="http://www.rainbowdressup.com/css/style.css?ver=1.755" rel="stylesheet" type="text/css" media="screen">
 
 <!-- javascript -->
-<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="//server.cpmstar.com/cached/js/popunder_v100.pack.js" type="text/javascript"></script><script src="http://www.rainbowdressup.com/js/final/default.js?ver=1.746" type="text/javascript"></script>
+<script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/4867.js?439016" async="" type="text/javascript"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="//server.cpmstar.com/cached/js/popunder_v100.pack.js" type="text/javascript"></script><script src="http://www.rainbowdressup.com/js/final/default.js?ver=1.755" type="text/javascript"></script>
+
+
+<!-- adx header -->
+<!-- no adx code required -->
+
+
 
 <!-- popunder -->
 <!-- cpmstar -->
@@ -53,7 +59,7 @@ t =document.getElementsByTagName('script');s
 
 
 <!-- epic -->
-<script type="text/javascript">document.write("<scr" + "ipt type='text/javascript' src='http://www.epicgameads.com/ads/popjs.php?id=NMByTxSfCv&channel=2&cb=" + new Date().getTime() + "'></scri" + "pt>");</script><script type="text/javascript" src="http://www.epicgameads.com/ads/popjs.php?id=NMByTxSfCv&amp;channel=2&amp;cb=1580459681915"></script>
+<script type="text/javascript">document.write("<scr" + "ipt type='text/javascript' src='http://www.epicgameads.com/ads/popjs.php?id=NMByTxSfCv&channel=2&cb=" + new Date().getTime() + "'></scri" + "pt>");</script><script type="text/javascript" src="http://www.epicgameads.com/ads/popjs.php?id=NMByTxSfCv&amp;channel=2&amp;cb=1580459685816"></script>
 
 <!-- analytics -->
 
@@ -72,7 +78,7 @@ pageTracker._trackPageview();
 
 <script type="text/javascript">
 var cpmstar_pid = 13967; // your poolid
-var cpmstar_centerWidth = "1000"; //width IN PIXELS of your center content, e.g. "800px"
+var cpmstar_centerWidth = ""; //width IN PIXELS of your center content, e.g. "800px"
 var cpmstar_fixed = "1" ; //fix ads near top of screen: "0" to allow ads to scroll with page
 var cpmstar_leftOffset = "0px" ; //optionally adjust left ad positioning
 var cpmstar_rightOffset = "0px" ; //optionally adjust right ad positioning
@@ -80,8 +86,24 @@ var cpmstar_zIndex = "100" ; //adjust layering of ads vs. other page elements
 var cpmstar_topPos = "0px" ; //optionally shift both ads down from top of page
 var cpmstar_rnd = Math.round(Math.random() * 999999);
 document.write("\x3cscript type='text/javascript' src='//server.cpmstar.com/view.aspx?poolid=" + cpmstar_pid + "&script=1&rnd=" + cpmstar_rnd + "'\x3e\x3c/script\x3e");
-</script><script type="text/javascript" src="//server.cpmstar.com/view.aspx?poolid=13967&amp;script=1&amp;rnd=567384"></script>
+</script><script type="text/javascript" src="//server.cpmstar.com/view.aspx?poolid=13967&amp;script=1&amp;rnd=527201"></script>
 <!-- END CPMSTAR TWO-SIDED SITESKIN CODE -->
+
+
+<!-- renove ads-->
+<script type="text/javascript">
+    function removeAdSwf() {
+        /*Remove add*/
+        document.getElementById("gamePreloader").style.display = "none";
+
+
+        /*Implemenation of removeAdSwf*/
+        document.getElementById("swfGame").style.display = "block";
+
+    }
+</script>
+
+
 
 </head>
 <body>
@@ -116,17 +138,13 @@ document.write("\x3cscript type='text/javascript' src='//server.cpmstar.com/view
 			<div class="logo"><a href="http://www.rainbowdressup.com/"><img class="logoImg" src="http://www.rainbowdressup.com/images/logo_add_4.jpg" width="1000" height="116" title="RainbowDressup.com" alt="RainbowDressup.com - girl games"></a>
 			</div>
 			
-			<div class="headerAdd ">
-				<script type="text/javascript"><!--
-				google_ad_client = "ca-pub-9845767537276584";
-				/* RainbowAd */
-				google_ad_slot = "2399879488";
-				google_ad_width = 728;
-				google_ad_height = 90;
-				//-->
-				</script>
-				<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-				</script>
+			<div class="headerAdd">
+				<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Rainbow 728 x 90 - header -->
+<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-9845767537276584" data-ad-slot="2399879488"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 			</div>
 			
 			
@@ -156,7 +174,6 @@ document.write("\x3cscript type='text/javascript' src='//server.cpmstar.com/view
 	<a href="http://www.rainbowdressup.com/girl-games/" title="Girl Games" class="elem girl-games "></a>
 </div>
 		
-		
 					
 			<div id="left">
 				<div class="menuGames left ">
@@ -164,66 +181,66 @@ document.write("\x3cscript type='text/javascript' src='//server.cpmstar.com/view
 		<script language="JavaScript" type="text/javascript">
 			aj_pr = Math.floor(Math.random() * 1000000);
 			document.write('<iframe width="100" height="100" noresize scrolling=No frameborder=0 marginheight=0 marginwidth=0 src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&dim=119&nocache='+aj_pr+'&referer='+escape(document.location.href)+'"></iframe>');
-        </script><iframe width="100" height="100" noresize="" scrolling="No" frameborder="0" marginheight="0" marginwidth="0" src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&amp;dim=119&amp;nocache=786285&amp;referer=https%3A//web.archive.org/web/20130618203057id_/http%3A//www.rainbowdressup.com/privacy-policy/"></iframe>
+        </script><iframe width="100" height="100" noresize="" scrolling="No" frameborder="0" marginheight="0" marginwidth="0" src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&amp;dim=119&amp;nocache=763932&amp;referer=https%3A//web.archive.org/web/20140215044123id_/http%3A//www.rainbowdressup.com/privacy-policy/"></iframe>
 	</div>
 	<div class="trafficTrade">
-		<iframe src="http://www.funklicks.com/work.php?n=8191&amp;size=24" width="100" height="100" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe>
-	</div>
+		<a href="http://www.dolidoli.com/" target="_blank"><img src="http://www.rainbowdressup.com/images/dolidoli.gif" <="" a="">
+	</a></div><a href="http://www.dolidoli.com/" target="_blank">
 	<div class="trafficTrade">
 		<script language="JavaScript" type="text/javascript">
 			aj_pr = Math.floor(Math.random() * 1000000);
 			document.write('<iframe width="100" height="100" noresize scrolling=No frameborder=0 marginheight=0 marginwidth=0 src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&dim=119&nocache='+aj_pr+'&referer='+escape(document.location.href)+'"></iframe>');
-        </script><iframe width="100" height="100" noresize="" scrolling="No" frameborder="0" marginheight="0" marginwidth="0" src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&amp;dim=119&amp;nocache=845199&amp;referer=https%3A//web.archive.org/web/20130618203057id_/http%3A//www.rainbowdressup.com/privacy-policy/"></iframe>
+        </script><iframe width="100" height="100" noresize="" scrolling="No" frameborder="0" marginheight="0" marginwidth="0" src="http://ads.gamesbannernet.com/servlet/ajrotator/135997/0/vh?z=gbn&amp;dim=119&amp;nocache=7585&amp;referer=https%3A//web.archive.org/web/20140215044123id_/http%3A//www.rainbowdressup.com/privacy-policy/"></iframe>
 	</div>
 	<div class="clear"></div>
 
-		<a href="http://www.rainbowdressup.com/game/mickey-the-fantastic-mouse/" title="Mickey the Fantastic Mouse" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12722/mickey-the-fantastic-mouse.gif" alt="Mickey The Fantastic Mouse - Mickey Mouse Dress Up Games" width="100" height="100"><br>
-		<span class="name">Mickey the F ...</span>
+		</a><a href="http://www.rainbowdressup.com/game/puppy-love/" title="Puppy Love" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13766/puppy-love.gif" alt="Puppy Love - New Animal Care Games " width="100" height="100"><br>
+		<span class="name">Puppy Love</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/precious-kitty/" title="Precious Kitty" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12700/precious-kitty.gif" alt="Precious Kitty - Cat Dress Up Games" width="100" height="100"><br>
-		<span class="name">Precious Kit ...</span>
+		<a href="http://www.rainbowdressup.com/game/kimmy-fashionista/" title="Kimmy Fashionista" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13757/kimmy-fashionista.gif" alt="Kimmy Fashionista - Kim Kardashian Dress Up Games " width="100" height="100"><br>
+		<span class="name">Kimmy Fashio ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/next-top-model/" title="Next Top Model" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12689/next-top-model.gif" alt="Next Top Model - Online Top Model Dress Up Games" width="100" height="100"><br>
-		<span class="name">Next Top Mod ...</span>
+		<a href="http://www.rainbowdressup.com/game/love-for-spa/" title="Love for Spa" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13729/love-for-spa.gif" alt="Love For Spa - Spa Games For Girls" width="100" height="100"><br>
+		<span class="name">Love for Spa</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/doliville/" title="Doliville" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12682/doliville.jpg" alt="Doliville - Fun Free Decoration Games" width="100" height="100"><br>
-		<span class="name">Doliville</span>
+		<a href="http://www.rainbowdressup.com/game/doli-thanksgiving-cards/" title="Doli Thanksgiving Cards" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/11769/doli-thanksgiving-cards.jpg" alt="Doli Thanksgiving Cards - Thanksgiving Skill Games" width="100" height="100"><br>
+		<span class="name">Doli Thanksg ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/doli-sweets-for-kids/" title="Doli Sweets for Kids" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12616/doli-sweets-for-kids.jpg" alt="Doli Sweets For Kids - Sweets Shop Management Games" width="100" height="100"><br>
-		<span class="name">Doli Sweets  ...</span>
+		<a href="http://www.rainbowdressup.com/game/toto-cooks-a-turkey/" title="Toto Cooks A Turkey" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/10968/toto-cooks-a-turkey.jpg" alt="Toto Cooks A Turkey - Thanksgiving Cooking Games" width="100" height="100"><br>
+		<span class="name">Toto Cooks A ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/toto-s-mother-s-day/" title="Toto's Mother's Day" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12517/toto-s-mother-s-day.jpg" alt="Toto's Mother's Day - Mother's Day Games For Girls" width="100" height="100"><br>
-		<span class="name">Toto's Mothe ...</span>
+		<a href="http://www.rainbowdressup.com/game/doli-fun-clean-up/" title="Doli Fun Clean Up" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13076/doli-fun-clean-up.jpg" alt="Doli Fun Clean Up - Clean Up Games For Girls" width="100" height="100"><br>
+		<span class="name">Doli Fun Cle ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/sleepy-girl/" title="Sleepy Girl" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12730/sleepy-girl.jpg" alt="Sleepy Girl - Bedtime Fashion Dress Up Games" width="100" height="100"><br>
-		<span class="name">Sleepy Girl</span>
+		<a href="http://www.rainbowdressup.com/game/valentine-s-day-hairdos/" title="Valentine's Day Hairdos" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13765/valentine-s-day-hairdos.jpg" alt="Valentine's Day Hairdos - Free Hair Styling Games " width="100" height="100"><br>
+		<span class="name">Valentine's  ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/father-s-day-slacking/" title="Father's Day Slacking" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12729/father-s-day-slacking.jpg" alt="Father's Day Slacking - Play Skills Games For Girls" width="100" height="100"><br>
-		<span class="name">Father's Day ...</span>
+		<a href="http://www.rainbowdressup.com/game/valentine-s-day-card/" title="Valentine's Day Card" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13756/valentine-s-day-card.jpg" alt="Valentine's Day Card - Decoration Games Online" width="100" height="100"><br>
+		<span class="name">Valentine's  ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/shopping-spree-for-prom/" title="Shopping Spree for Prom" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12731/shopping-spree-for-prom.jpg" alt="Shopping Spree For Prom - Prom Girl Dress Up Games" width="100" height="100"><br>
-		<span class="name">Shopping Spr ...</span>
+		<a href="http://www.rainbowdressup.com/game/dreamland-princess/" title="Dreamland Princess" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13755/dreamland-princess.jpg" alt="Dreamland Princess - Princess Dress Up Games " width="100" height="100"><br>
+		<span class="name">Dreamland Pr ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/love-in-venice/" title="Love in Venice" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12714/love-in-venice.jpg" alt="Love In Venice - Couple Games For Girls" width="100" height="100"><br>
-		<span class="name">Love in Veni ...</span>
+		<a href="http://www.rainbowdressup.com/game/fiona-dentist-care/" title="Fiona Dentist Care" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13767/fiona-dentist-care.jpg" alt="Fiona Dentist Care - Dentist Care Games" width="100" height="100"><br>
+		<span class="name">Fiona Dentis ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/flirting-at-the-beach/" title="Flirting at the Beach" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12710/flirting-at-the-beach.jpg" alt="Flirting At The Beach - Online Free Flirting Games" width="100" height="100"><br>
-		<span class="name">Flirting at  ...</span>
+		<a href="http://www.rainbowdressup.com/game/be-my-valentine-2/" title="Be My Valentine 2" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13764/be-my-valentine-2.jpg" alt="Be My Valentine 2 - Valentine's Day Makeover Games " width="100" height="100"><br>
+		<span class="name">Be My Valent ...</span>
 	</a>
-		<a href="http://www.rainbowdressup.com/game/super-peach-blast/" title="Super Peach Blast" class="thumb game">
-		<img src="http://files.rainbowdressup.com/games/upload/12709/super-peach-blast.jpg" alt="Super Peach Blast - Mario Games For Girls" width="100" height="100"><br>
-		<span class="name">Super Peach  ...</span>
+		<a href="http://www.rainbowdressup.com/game/valentine-s-day-slacking/" title="Valentine's Day Slacking" class="thumb game">
+		<img src="http://files.rainbowdressup.com/games/upload/13762/valentine-s-day-slacking.jpg" alt="Valentine's Day Slacking - Slacking Games 2014" width="100" height="100"><br>
+		<span class="name">Valentine's  ...</span>
 	</a>
 	<br class="clear">
 	
@@ -342,6 +359,16 @@ By using this site, you signify your assent to the  CarTitans.com Privacy Policy
 
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
+
+
+<!-- google content stuff -->
+
+<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0013/4867.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
 
 
 
